// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 组件测试 Alert 主题图标显示 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert 组件测试 Alert 主题图标显示 2`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert 组件测试 Alert 主题图标显示 3`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert 组件测试 Alert 主题图标显示 4`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert 组件测试 Alert 主题图标显示 5`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert 组件测试 Alert 主题图标显示 6`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--error"
  >
    <span
      class="t-alert__icon"
    >
      CustomIcon
    </span>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          Alert内容
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlertSelfClose.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      知道了
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      不再提醒
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`close.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      关闭
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      知道了
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <span>
        自定义关闭
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`collapse.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          <div>
            1.这是一条普通的消息提示描述，
          </div>
          <div>
            2.这是一条普通的消息提示描述，
          </div>
          <div
            class="t-alert__collapse"
          >
            展开更多
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <a>
            相关操作
          </a>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <a>
            相关操作
          </a>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息
        </div>
        <div
          class="t-alert__operation"
        >
          <a>
            相关操作
          </a>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <a>
            相关操作
          </a>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`swiper.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`title.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
        这是一条普通的消息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示描述，这是一条普通的消息提示描述
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
